Added vector icons

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,8 @@ target 'AWRAssignment' do
   pod 'GoogleMaps'
 #  pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
 
 post_install do |installer|
